test/compilable/imports/art4769b.d
private import imports.art4769a;
private import art4769;

int main(string[] args)
{
   Vector!(wchar) str;
   return 0;
}

