test/fail_compilation/fail131.d
int main (lazy char [][] args)
{
        return args.length;
}

